Fixed volume position on Firefox

--- a/index.css
+++ b/index.css
@@ -30,16 +30,23 @@ input, button, select {
 .audio-container {
   position: relative;
 }
-.audio-container i {
+.audio-container span {
   position: absolute;
-  right: 54px;
-  top: 410px;
+  left: 44px;
+  top: 52px;
 }
 #audio-slider {
   transform: rotate(270deg);
   position: absolute;
-  right: 0;
-  top: 330px;
+  left: -10px;
+  top: -30px;
+}
+@-moz-document url-prefix() { 
+  .audio-container span {
+    position: absolute;
+    left: 59px;
+    top: 67px;
+  }
 }
 #settings {
   display: none;
